# black-and-white

./: .black-and-white.toml  README.md  pyproject.toml
black_and_white/: __init__.py  __main__.py  cli.py  config.py  format.py  parsing.py
docs/: configuration.md
src/: __init__.py  cli.py  core.py
