[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "black-and-white"
description = "The not that munch compromising Python code formatter"
readme = "README.md"
requires-python = ">= 3.11" # Because of the use of tomllib
authors = [
	{name = "foxy pirate cove / Fnaf"}
]
keywords = ["black", "black-and-white", "formatting"]
dynamic = ["version"]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
	"Programming Language :: Python :: 3",
]

[tool.hatch.version]
path = "black_and_white/__init__.py"

[project.urls]
homepage = "https://github.com/foxypiratecove37350/black-and-white"
repository = "https://github.com/foxypiratecove37350/black-and-white"
documentation = "https://github.com/foxypiratecove37350/black-and-white/tree/main/docs"
issues = "https://github.com/foxypiratecove37350/black-and-white/issues"
changelog = "https://github.com/foxypiratecove37350/black-and-white/releases"
releasenotes = "https://github.com/foxypiratecove37350/black-and-white/releases/latest"

[project.scripts]
black-and-white = "black_and_white:main"
